Filterung,http für Produktion

--- a/club-manager/src/app/activity/activity-header/activity-header.component.html
+++ b/club-manager/src/app/activity/activity-header/activity-header.component.html
@@ -3,7 +3,7 @@
   <mat-icon id="add-icon" class="material-icons-round">add_circle</mat-icon>
 
   <div class="search">
-    <mat-icon class="search-icon">search</mat-icon>Filter:
+    <mat-icon class="search-icon">search</mat-icon>Suche:
     <mat-form-field class="search-input1">
      <input  matInput placeholder="nach Kurzname, Vor- und Nachnamen" #input1>
     </mat-form-field>
