--- a/club-manager/src/app/app.component.html
+++ b/club-manager/src/app/app.component.html
@@ -33,6 +33,9 @@
     <span class="toolbartext">
       V 0.1
     </span>
+    <button mat-button>
+    <mat-icon>help</mat-icon>
+    </button>
     <button mat-button routerLink="settings">
       <mat-icon>settings</mat-icon>
     </button>
