--- a/club-manager/src/app/members/member-view/member-view.component.html
+++ b/club-manager/src/app/members/member-view/member-view.component.html
@@ -1,5 +1,5 @@
 <ng-container>
   <div class="table-base">
-    <cl-member-table [filter]="search"></cl-member-table>
+    <cl-member-table [search]="search"></cl-member-table>
   </div>
  </ng-container>
