--- a/club-manager/src/app/app.component.scss
+++ b/club-manager/src/app/app.component.scss
@@ -50,6 +50,11 @@
   height: 40px;
 }
 
+.help-button .mat-button {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
 .menuText {
   margin-left: 10px;
 }
