--- a/club-manager/src/app/reports/report-header/report-header.component.html
+++ b/club-manager/src/app/reports/report-header/report-header.component.html
@@ -1,5 +1,10 @@
 <mat-toolbar color="accent">
   <span>Reports</span>
 
+  <div class="toolbar-right">
+    <button mat-button (click)="onHelp()" class="help-button">
+      <mat-icon>help</mat-icon>
+    </button>
+  </div>
 </mat-toolbar>
 
