--- a/club-manager/src/app/statistic/statistic-header/statistic-header.component.html
+++ b/club-manager/src/app/statistic/statistic-header/statistic-header.component.html
@@ -2,4 +2,9 @@
   <span>Statistik</span>
   <!-- <mat-icon class="search-icon1">person_add_alt_1</mat-icon> -->
 
+  <div class="toolbar-right">
+    <button mat-button (click)="onHelp()" class="help-button">
+      <mat-icon>help</mat-icon>
+    </button>
+  </div>
 </mat-toolbar>
