--- a/club-manager/src/app/dashboard/dashboard-header/dashboard-header.component.html
+++ b/club-manager/src/app/dashboard/dashboard-header/dashboard-header.component.html
@@ -1,3 +1,9 @@
 <mat-toolbar color="accent">
   <span>Übersicht</span>
+
+  <div class="toolbar-right">
+    <button mat-button (click)="onHelp()" class="help-button">
+      <mat-icon>help</mat-icon>
+    </button>
+  </div>
 </mat-toolbar>
