--- a/club-manager/src/app/groups/group-header/group-header.component.html
+++ b/club-manager/src/app/groups/group-header/group-header.component.html
@@ -3,6 +3,9 @@
   <mat-icon class="add-icon">group_add</mat-icon>
 
   <div class="toolbar-right">
+    <button mat-button (click)="onHelp()" class="help-button">
+      <mat-icon>help</mat-icon>
+   </button>
     <button mat-button [matMenuTriggerFor]="menu">
       <mat-icon>more_horiz</mat-icon>
     </button>
