Gruppen Basis implementiert

--- a/club-manager/src/app/app.component.html
+++ b/club-manager/src/app/app.component.html
@@ -123,6 +123,26 @@
       <cl-member-update-header></cl-member-update-header>
     </div>
   </span>
+  <span *ngSwitchCase="13">
+    <div class="header">
+      <cl-activity-create-header></cl-activity-create-header>
+    </div>
+  </span>
+  <span *ngSwitchCase="14">
+    <div class="header">
+      <cl-activity-update-header></cl-activity-update-header>
+    </div>
+  </span>
+  <span *ngSwitchCase="15">
+    <div class="header">
+      <cl-group-create-header></cl-group-create-header>
+    </div>
+  </span>
+  <span *ngSwitchCase="16">
+    <div class="header">
+      <cl-group-update-header></cl-group-update-header>
+    </div>
+  </span>
   <span *ngSwitchCase="99">
     <div class="header">
       <cl-settings-header></cl-settings-header>
