--- a/club-manager/src/app/groups/group-header/group-header.component.html
+++ b/club-manager/src/app/groups/group-header/group-header.component.html
@@ -1,6 +1,12 @@
 <mat-toolbar color="accent">
   <span>Gruppen</span>
-  <mat-icon class="add-icon">group_add</mat-icon>
+  <mat-icon Id="add-icon" class="material-icons-round" (click)="headerNav('grp-create')">group_add</mat-icon>
+  <div class="search">
+    <mat-icon class="search-icon">search</mat-icon>Suche:
+    <mat-form-field class="search-input">
+      <input  matInput placeholder="nach Gruppenname" #input>
+    </mat-form-field>
+  </div>
 
   <div class="toolbar-right">
     <button mat-button (click)="onHelp()" class="help-button">
@@ -13,7 +19,6 @@
 </mat-toolbar>
 
 <mat-menu #menu="matMenu">
-  <button mat-menu-item (click)="secondaryNav('mem-columns')">Spalten ändern...</button>
-  <button mat-menu-item (click)="secondaryNav('mem-groups')">Gruppen zuweisen...</button>
+  <button mat-menu-item (click)="secondaryNav('grp-groups')">Gruppen zuweisen...</button>
   <button mat-menu-item (click)="secondaryNav('close')">Sidebar schließen</button>
 </mat-menu>
