--- a/club-manager/src/app/groups/group-header/group-header.component.scss
+++ b/club-manager/src/app/groups/group-header/group-header.component.scss
@@ -10,6 +10,34 @@
   height: 50px;
 }
 
-.add-icon {
+#add-icon {
   margin-left: 20px;
+}
+
+#add-icon:hover {
+  background-color: var(--primary);
+}
+
+.search {
+  margin-top: 8px;
+  margin-left: 100px;
+  font-size: 12pt;
+}
+
+.search-icon {
+  margin-left: 50px;
+  font-size: 12pt;
+}
+
+.search-input {
+  margin-left: 5px;
+  font-size:8pt;
+}
+
+.filter {
+  padding-left: 40px;
+}
+
+.filter-text {
+  font-size:8pt;
 }
