--- a/club-manager/src/app/groups/group-view/group-view.component.html
+++ b/club-manager/src/app/groups/group-view/group-view.component.html
@@ -1,5 +1,5 @@
 <ng-container>
   <div class="table-base">
-    <cl-activity-table [search]="search"></cl-activity-table>
+    <cl-group-table [search]="search"></cl-group-table>
   </div>
  </ng-container>
