--- a/club-manager/src/app/groups/group-create/group-create.component.html
+++ b/club-manager/src/app/groups/group-create/group-create.component.html
@@ -11,9 +11,9 @@
       </p>
 
       <p>
-      <mat-form-field class="field-comment">
-        <mat-label>Beschreibung</mat-label>
-        <textarea matInput rows="1" formControlName="comment"></textarea>
+      <mat-form-field class="field-long">
+        <mat-label>Bemerkung</mat-label>
+        <input  matInput formControlName="comment">
       </mat-form-field>
       </p>
   </div>
