--- a/club-manager/src/app/groups/group-footer-pagination/group-footer-pagination.component.html
+++ b/club-manager/src/app/groups/group-footer-pagination/group-footer-pagination.component.html
@@ -1,1 +1,5 @@
-<p>group-footer-pagination works!</p>
+<div class="pag">
+  <mat-paginator fixed color="primary" (page)="onChangePage()"  [length]="length" [pageSize]="pageSize" [pageSizeOptions]=pageSizeOptions>
+  </mat-paginator>
+</div>
+
