--- a/club-manager/src/app/members/member-table/member-table.component.scss
+++ b/club-manager/src/app/members/member-table/member-table.component.scss
@@ -1,4 +1,5 @@
 @import '../../_shared/variables.sass';
+@import '../../_shared/global.css';
 
 .table-container {
   overflow:auto;
@@ -58,42 +59,5 @@
   text-align: center;
   top: 35%;
   left: 44%;
-}
-
-// Spaltenbreiten
-.W25 {
-  width : 25px;
-}
-
-.W50 {
-  width : 50px;
-}
-
-.W75 {
-  width : 75px;
-}
-
-.W100 {
-  width : 100px;
-}
-
-.W150 {
-  width : 150px;
-}
-
-.W200 {
-  width : 200px;
-}
-
-.W250 {
-  width : 250px;
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-}
-
-.W300 {
-  width : 300px;
-  overflow-wrap: break-word;
-  word-wrap: break-word;
 }
 
