Gruppe mit Mitlgiederspalten + fixes

--- a/club-manager/src/app/activity/activity-create-header/activity-create-header.component.html
+++ b/club-manager/src/app/activity/activity-create-header/activity-create-header.component.html
@@ -1,3 +1,9 @@
 <mat-toolbar color="accent">
-  <h1>Neue Activität anlegen</h1>
+  <h1>Neue Aktivität anlegen</h1>
+
+  <div>
+    <button mat-button (click)="onHelp()" class="help-button">
+      <mat-icon>help</mat-icon>
+    </button>
+  </div>
 </mat-toolbar>
