--- a/club-manager/src/app/groups/group-create-header/group-create-header.component.html
+++ b/club-manager/src/app/groups/group-create-header/group-create-header.component.html
@@ -1,4 +1,10 @@
 <mat-toolbar color="accent">
   <h1>Neue Gruppe anlegen</h1>
+
+  <div class="toolbar-right">
+    <button mat-button (click)="onHelp()" class="help-button">
+      <mat-icon>help</mat-icon>
+   </button>
+  </div>
 </mat-toolbar>
 
