--- a/club-manager/src/app/groups/group-create/group-create.component.html
+++ b/club-manager/src/app/groups/group-create/group-create.component.html
@@ -18,6 +18,7 @@
       </p>
   </div>
 
+  <button mat-raised-button type="submit" (click)="onCancel()" color="primary" class="cancel-button">Abbrechen</button>
   <button mat-raised-button [disabled]="myForm.invalid" type="submit" (click)="onSave()" color="primary" class="ok-button">Anlegen</button>
   <button mat-raised-button [disabled]="myForm.invalid" type="submit" (click)="onSaveNew()" color="primary" class="ok-button">Anlegen + Neu</button>
 </form>
