--- a/club-manager/src/app/groups/group-update-header/group-update-header.component.html
+++ b/club-manager/src/app/groups/group-update-header/group-update-header.component.html
@@ -13,6 +13,6 @@
 
 <mat-menu #menu="matMenu">
   <button mat-menu-item (click)="onSecondaryNav('grp-columns')">Spalten auswählen...</button>
-  <button mat-menu-item (click)="onSecondaryNav('grp-groups')">Gruppen zuweisen...</button>
+  <button mat-menu-item (click)="onSecondaryNav('grp-mems')">Mitglieder zuweisen...</button>
   <button mat-menu-item (click)="onSecondaryNav('close')">Sidebar schließen</button>
 </mat-menu>
