--- a/club-manager/src/app/members/member-select-list/member-select-list.component.html
+++ b/club-manager/src/app/members/member-select-list/member-select-list.component.html
@@ -1,4 +1,4 @@
-
+<h1>Mitglieder auswählen</h1>
 <!-- <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
   <ng-container matColumnDef="select">
