--- a/club-manager/src/app/members/member-update-header/member-update-header.component.html
+++ b/club-manager/src/app/members/member-update-header/member-update-header.component.html
@@ -1,3 +1,9 @@
 <mat-toolbar color="accent">
-  <h1>Mitgliderdaten</h1>
+  <h1>Mitgliederdaten bearbeiten</h1>
+
+  <div class="toolbar-right">
+    <button mat-button (click)="onHelp()" class="help-button">
+      <mat-icon>help</mat-icon>
+   </button>
+  </div>
 </mat-toolbar>
