--- a/club-manager/src/app/members/member-create-header/member-create-header.component.html
+++ b/club-manager/src/app/members/member-create-header/member-create-header.component.html
@@ -1,3 +1,9 @@
 <mat-toolbar color="accent">
   <h1>Neues Mitglied anlegen</h1>
+
+<div class="toolbar-right">
+  <button mat-button (click)="onHelp()" class="help-button">
+    <mat-icon>help</mat-icon>
+ </button>
+</div>
 </mat-toolbar>
