--- a/club-manager/src/app/app.component.html
+++ b/club-manager/src/app/app.component.html
@@ -206,6 +206,11 @@
           <cl-footer-empty></cl-footer-empty>
         </div>
       </span>
+      <span *ngSwitchCase="16">
+        <div class="footer-comp">
+          <cl-group-mem-footer-pagination></cl-group-mem-footer-pagination>
+        </div>
+      </span>
     </ng-container>
   </div>
 </ng-container>
