--- a/club-manager/src/app/members/member-table/member-table.component.html
+++ b/club-manager/src/app/members/member-table/member-table.component.html
@@ -9,7 +9,7 @@
           {{col.Label}}
       </th>
       <td mat-cell [class]="col.Width" *matCellDef="let member">{{member[col.Name]}}
-        <!-- <div *ngIf="i==0"><button mat-icon-button color="primary" (click)="editMember(col)" title="Edit Contact"><mat-icon>edit</mat-icon></button></div> -->
+      <!--  <div *ngIf="i==0"><button mat-icon-button color="primary" (click)="onEditMember(col)" title="Edit Contact"><mat-icon>edit</mat-icon></button></div>-->
       </td>
     </ng-container>
 
