--- a/club-manager/src/app/members/member-update/member-update.component.html
+++ b/club-manager/src/app/members/member-update/member-update.component.html
@@ -367,7 +367,7 @@
       </div>
     </mat-tab>
 
-    <mat-tab label="Historie">
+    <mat-tab label="Kommentar">
     <div class="form-area">
 
       <p>
